squashing more bugs

--- a/style.css
+++ b/style.css
@@ -554,12 +554,12 @@ h1 {
 .footer div div {
     display: inline-block;
     padding: 0;
-    width: calc(100% - 60px)
+    width: calc(100% - 60px);
 }
 
 @media screen and (max-width: 460px) {
     .footer div div {
-        transform: translateY(10px);
+        transform: translate(-2px,10px);
     }
 }
 
